tests/compile-pass/m4-call-004-closure-effects.to
fn build() {
    let sync: fn(Int): Int = (value) { value }
    let raw: unsafe fn(Int): Int = unsafe (value) { value }
    let later: async fn(Int): Int = async (value) { value }
    let both: async unsafe fn(Int): Int = async unsafe (value) { value }
    _ = sync
    _ = raw
    _ = later
    _ = both
}
