tests/compile-fail/invalid-operator-chain.to
fn chained(value: Int): Bool {
    0 < value < 10
}
